<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_above="@+id/MainActivityTrainButton"
      android:gravity="center"
      android:layout_marginBottom="10dp"
      android:orientation="vertical">

    <TextView
        android:id="@+id/MainActivityLastSessionDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/MainActivityLastSessionDateText"
        android:textSize="60sp"
        android:freezesText="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/MainActivityLastSessionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/MainActivityLastSessionLabelText"
        android:textSize="30sp" />

  </LinearLayout>

  <Button
      android:id="@+id/MainActivityTrainButton"
      android:layout_width="fill_parent"
      android:layout_height="70dp"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:onClick="onTrainButtonClicked"
      android:gravity="center"
      android:singleLine="true"
      android:text="@string/MainActivityTrainButtonText"
      android:textSize="40sp"
      android:textStyle="bold|normal" />

</RelativeLayout>
