<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~    This file is part of Exceer                                            ~
  ~                                                                           ~
  ~    Copyright (C) 2015  Andreas Grapentin                                  ~
  ~                                                                           ~
  ~    This program is free software: you can redistribute it and/or modify   ~
  ~    it under the terms of the GNU General Public License as published by   ~
  ~    the Free Software Foundation, either version 3 of the License, or      ~
  ~    (at your option) any later version.                                    ~
  ~                                                                           ~
  ~    This program is distributed in the hope that it will be useful,        ~
  ~    but WITHOUT ANY WARRANTY; without even the implied warranty of         ~
  ~    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the          ~
  ~    GNU General Public License for more details.                           ~
  ~                                                                           ~
  ~    You should have received a copy of the GNU General Public License      ~
  ~    along with this program.  If not, see <http://www.gnu.org/licenses/>.  ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.grapentin.apps.exceer.gui.AboutActivity">

  <org.grapentin.apps.exceer.gui.widgets.TextWidget
      android:id="@+id/AboutActivityTitleLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:singleLine="true"
      android:text="@string/app_name"
      android:textSize="25sp"
      android:textStyle="bold" />

  <ScrollView
      android:id="@+id/scrollView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@+id/AboutActivityTitleLabel">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <org.grapentin.apps.exceer.gui.widgets.TextWidget
          android:id="@+id/AboutActivityShortCopyrightLabel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
          android:text="@string/AboutActivityShortCopyrightLabelText"
          android:textSize="14sp" />

      <org.grapentin.apps.exceer.gui.widgets.LinkTextWidget
          android:id="@+id/AboutActivityNickJanvierLabel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
          android:text="@string/AboutActivityNickJanvierLabelText"
          android:textSize="14sp" />

      <org.grapentin.apps.exceer.gui.widgets.LinkTextWidget
          android:id="@+id/AboutActivitySoundsCopyrightLabel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
          android:text="@string/AboutActivitySoundsCopyrightLabelText"
          android:textSize="14sp" />

      <org.grapentin.apps.exceer.gui.widgets.LinkTextWidget
          android:id="@+id/AboutActivityIconCopyrightLabel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
          android:drawableLeft="@mipmap/ic_launcher"
          android:drawableStart="@mipmap/ic_launcher"
          android:text="@string/AboutActivityIconCopyrightLabelText"
          android:textSize="14sp" />

      <org.grapentin.apps.exceer.gui.widgets.LinkTextWidget
          android:id="@+id/AboutActivityLongCopyrightLabel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
          android:text="@string/AboutActivityLongCopyrightLabelText"
          android:textSize="14sp" />

    </LinearLayout>

  </ScrollView>

</RelativeLayout>
